<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MPopular</string>
    <string name="title_activity_nueva_red">Nueva red</string>
    <string name="title_activity_mis_redes">Mis Redes sociales</string>
    <string name="title_activity_acerca">Acerca de MPopular</string>
    <string name="title_activity_configuracion">Configuración</string>
    <string name="title_activity_opciones">Opciones</string>
    <string name="title_activity_terminos">Terminos y Condiciones</string>
    <string name="title_activity_nuevo_usuario">Nuevo usuario</string>
    <string name="title_activity_ayuda">Ayuda de MPopular</string>
    <string name="txt_cargando">cargando...</string>
    <string name="txt_editar">Editar</string>
    <string name="txt_eliminar">Eliminar</string>
    <string name="txt_aceptar">Aceptar</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="txt_pais">España</string>
	<string name="txt_desarrollador"><a href="https://plus.google.com/+jhonnyjuncal/">Jhonny Juncal Gonzalez</a></string>
    <string name="txt_antes_de_salir">Para acceder a la aplicación, antes debe registrarse</string>
    <string name="txt_salir_1_aviso">Pulse de nuevo para salir</string>
    <string name="txt_no_puede_vacio">Usuario no puede estar vacio</string>
    <string name="txt_busqueda_minima">Busqueda mínima 3 caracteres</string>
    <string name="txt_selecciona_red">Debe seleccionar la red para este usuario</string>
    <string name="txt_buscando">Buscando...</string>
    <string name="txt_busq_cancelada">Busqueda cancelada...</string>
    <string name="txt_nombre_no_vacio">El nombre no puede estar vacio</string>
	<string name="txt_nombre_menos3">El nombre debe tener mas de 3 caracteres</string>
	<string name="txt_nombre_no_espacio">El nombre no puede tener espacios en blanco</string>
	<string name="txt_telefono_no_vacio">El teléfono no puede estar vacio</string>
	<string name="txt_telefono_menos3">El teléfono debe tener mas de 3 números</string>
	<string name="txt_email_no_vacio">El e-mail no puede estar vacio</string>
	<string name="txt_email_incorrecto">El e-mail es incorrecto</string>
	<string name="txt_email_menos3">El e-mail debe tener mas de 3 caracteres</string>
	<string name="txt_pais_no_vacio">El país no puede estar vacio</string>
	<string name="txt_pais_menos3">El país debe tener mas de 3 caracteres</string>
	<string name="txt_guardando">Guardando datos...</string>
	<string name="txt_primer_guardado_ok">Datos creados correctamente</string>
	<string name="txt_guardado_ok">Datos modificados correctamente</string>
	<string name="txt_guardado_error">Error al modificar los datos</string>
	<string name="txt_guardado_cancelado">Modificación cancelada...</string>
	<string name="txt_pregunta_borrar">¿Desea borrar la cuenta?</string>
	<string name="txt_borrando">Eliminando datos...</string>
	<string name="txt_borrado_ok">Datos eliminados correctamente</string>
	<string name="txt_borrado_error">Se ha producido un error al eliminar la cuenta</string>
	<string name="txt_borrado_cancelado">Eliminacion cancelada...</string>
	<string name="txt_borrado_total">Borrado total</string>
	<string name="txt_borrado_total_confirma">Todos los datos seran borrados permanentemente\n¿Desea continuar?</string>
	<string name="txt_actualizando">Actualizando listado...</string>
	<string name="txt_actualiza_cancelada">Actualización cancelada...</string>
	<string name="txt_cuanta_guardada_ok">Cuenta añadida correctamente</string>
	<string name="txt_cuanta_guardada_error">Error al añadir la cuenta</string>
	<string name="txt_cuanta_guardada_cancel">Guardado cancelado</string>
	<string name="txt_error_servidor">Error de conexion con el servidor</string>
	<string name="txt_cuenta_duplicada">Ya existe una red con estos valores</string>
    <string name="label_usuario">Usuario:</string>
    <string name="label_usuario2">Usuario</string>
    <string name="label_red">Red:</string>
    <string name="label_nombre">Nombre:</string>
    <string name="label_telefono">Teléfono:</string>
    <string name="label_email">E-mail:</string>
    <string name="label_pais">País:</string>
    <string name="label_mostrar_buscador">Mostrar buscador</string>
    <string name="label_red_social">Red social:</string>
    <string name="label_guardar_datos">Guardar datos</string>
    <string name="label_mis_redes">Mis redes sociales</string>
    <string name="label_nueva_cuenta">Insertar cuenta nueva</string>
    <string name="label_listado_cuentas">Listado de cuentas</string>
    <string name="label_nombre_usuario">Nombre de usuario:</string>
    <string name="label_guardar_cuenta">Guardar cuenta</string>
    <string name="label_resultados">Resultados:</string>
    <string name="label_catidad_resultados"> registros encontrados</string>
    <string name="label_sin_resultados">No se han encontrado resultados</string>
    <string name="label_buscador">Buscador</string>
    <string name="label_inicio">Principal</string>
    <string name="label_acerca_de">Acerca de MPopular</string>
    <string name="label_valora">Valora MPopular</string>
    <string name="label_terminos">Terminos y condiciones de MPopular</string>
    <string name="label_version">Version:</string>
    <string name="label_creacion">Creacion:</string>
    <string name="label_desarrollado">Desarrollado por:</string>
    <string name="label_datos_personales">Datos personales:</string>
    <string name="label_eliminar_cuenta">Eliminar cuenta:</string>
    <string name="label_desea_eliminar">Al eliminar su cuenta todos sus datos se borraran definitivamente de la base de datos</string>
    <string name="label_borrar_cuenta">Eliminar definitivamente</string>
    <string name="label_actualizar">Actualizar redes</string>
    <string name="label_version1">Copyright 2013 MPopular</string>
    <string name="label_version2">Todos los derechos reservados</string>
    <string name="label_ayuda">Ayuda</string>
    <string name="label_add_nueva_red">Añadir nueva red</string>
    <string name="label_seleccionar_red">Seleccionar red</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>