<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context="com.jhonny.mpopular.activity.PrincipalActivity"
	tools:showIn="@layout/app_bar_principal">
	
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="#666666"
        android:orientation="vertical" >
        
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="horizontal" >
	        
			<TextView
			    android:id="@+id/ppal_textView1"
			    android:layout_width="80dp"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="15dp"
			    android:layout_marginTop="10dp"
			    android:text="@string/label_nombre"
			    android:textColor="#ffffff"
			    android:textSize="@dimen/tamano_fuente" />
				
			<TextView
			    android:id="@+id/ppal_textView2"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="10dp"
			    android:text="@string/txt_cargando"
			    android:textColor="#ffffff"
			    android:textSize="@dimen/tamano_fuente" />

	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="horizontal" >
			
			<TextView
			    android:id="@+id/ppal_textView3"
			    android:layout_width="80dp"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="15dp"
			    android:layout_marginTop="30dp"
			    android:text="@string/label_telefono"
			    android:textColor="#ffffff"
			    android:textSize="@dimen/tamano_fuente" />
		
			<TextView
			    android:id="@+id/ppal_textView4"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="30dp"
			    android:text="@string/txt_cargando"
			    android:textColor="#ffffff"
			    android:textSize="@dimen/tamano_fuente" />

		</LinearLayout>
		
		<LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="horizontal" >
			
			<TextView
			    android:id="@+id/ppal_textView5"
			    android:layout_width="80dp"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="15dp"
			    android:layout_marginTop="50dp"
			    android:text="@string/label_email"
			    android:textColor="#ffffff"
			    android:textSize="@dimen/tamano_fuente" />
		
			<TextView
			    android:id="@+id/ppal_textView6"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="50dp"
			    android:text="@string/txt_cargando"
			    android:textColor="#ffffff"
			    android:textSize="@dimen/tamano_fuente" />

		</LinearLayout>
		
		<LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="horizontal" >
			
			<TextView
			    android:id="@+id/ppal_textView7"
			    android:layout_width="80dp"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="15dp"
			    android:layout_marginTop="70dp"
			    android:text="@string/label_pais"
			    android:textColor="#ffffff"
			    android:textSize="@dimen/tamano_fuente" />
		
			<TextView
			    android:id="@+id/ppal_textView8"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="70dp"
			    android:text="@string/txt_cargando"
			    android:textColor="#ffffff"
			    android:textSize="@dimen/tamano_fuente" />

		</LinearLayout>
	</RelativeLayout>

    <LinearLayout
	    android:id="@+id/linearLayout2"
	    android:layout_width="fill_parent"
	    android:layout_height="50dp"
	    android:layout_alignParentBottom="true"
	    android:orientation="vertical"
	    android:weightSum="1" />

</RelativeLayout>
