<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="350dp"
    android:background="@color/gris_claro"
    tools:context=".activity.OpcionesActivity" >
	
    <ScrollView
        android:id="@+id/opc_scrollView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="50dp"
		        android:background="@color/gris_oscuro"
		        android:orientation="horizontal" >

		    	<TextView
		    	    android:id="@+id/opc_textView1"
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:layout_gravity="center_vertical"
		    	    android:layout_marginLeft="@dimen/activity_horizontal_margin"
		    	    android:text="@string/txt_cargando"
		    	    android:textColor="@color/blanco"
		    	    android:textSize="@dimen/tamano_fuente_grande"
		    	    android:textStyle="bold" />

			</LinearLayout>
			
			
			
			<LinearLayout
			    android:id="@+id/opc_layout_inicio"
			    android:layout_width="fill_parent"
			    android:layout_height="35dp"
			    android:clickable="true"
			    android:onClick="muestraPrincipal"
			    android:orientation="horizontal" >
			    <ImageView
				    android:id="@+id/opc_imageView1"
				    android:layout_width="30dp"
				    android:layout_height="30dp"
				    android:layout_gravity="center_vertical"
				    android:layout_marginLeft="@dimen/activity_horizontal_margin"
				    android:contentDescription="@string/txt_cargando"
				    android:src="@mipmap/ic_home" />
				<TextView
				    android:id="@+id/opc_textView2"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:layout_marginLeft="5dp"
				    android:text="@string/label_inicio"
				    android:textSize="@dimen/tamano_fuente"
				    android:textStyle="bold" />
			</LinearLayout>
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="5dp"
			    android:orientation="horizontal" />
			<!--android:background="@drawable/ext_linea"-->

			
			<LinearLayout
			    android:id="@+id/opc_layout_busq"
			    android:layout_width="fill_parent"
			    android:layout_height="35dp"
			    android:clickable="true"
			    android:onClick="muestraBuscador"
			    android:orientation="horizontal" >
				<ImageView
				    android:id="@+id/opc_imageView2"
				    android:layout_width="30dp"
				    android:layout_height="30dp"
				    android:layout_gravity="center_vertical"
				    android:layout_marginLeft="@dimen/activity_horizontal_margin"
				    android:contentDescription="@string/txt_cargando"
				    android:src="@mipmap/ic_buscar" />
				<TextView
				    android:id="@+id/opc_textView3"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:layout_marginLeft="5dp"
				    android:text="@string/label_buscador"
				    android:textSize="@dimen/tamano_fuente"
				    android:textStyle="bold" />
			</LinearLayout>
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="5dp"
			    android:orientation="horizontal" />
			<!--android:background="@drawable/ext_linea"-->

			
		
			<LinearLayout
			    android:id="@+id/opc_layout_redes"
			    android:layout_width="fill_parent"
			    android:layout_height="35dp"
			    android:clickable="true"
			    android:onClick="muestraMisRedes"
			    android:orientation="horizontal" >
				<ImageView
				    android:id="@+id/opc_imageView3"
				    android:layout_width="30dp"
				    android:layout_height="30dp"
				    android:layout_gravity="center_vertical"
				    android:layout_marginLeft="@dimen/activity_horizontal_margin"
				    android:contentDescription="@string/txt_cargando"
				    android:src="@mipmap/ic_mis_redes" />
				<TextView
				    android:id="@+id/opc_textView4"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:layout_marginLeft="5dp"
				    android:text="@string/label_mis_redes"
				    android:textSize="@dimen/tamano_fuente"
				    android:textStyle="bold" />
			</LinearLayout>
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="5dp"
			    android:orientation="horizontal" />
			<!--android:background="@drawable/ext_linea"-->

			
			
			<LinearLayout
			    android:id="@+id/opc_layout_conf"
			    android:layout_width="fill_parent"
			    android:layout_height="35dp"
			    android:clickable="true"
			    android:onClick="muestraConfiguracionApp"
			    android:orientation="horizontal" >
				<ImageView
				    android:id="@+id/opc_imageView4"
				    android:layout_width="30dp"
				    android:layout_height="30dp"
				    android:layout_gravity="center_vertical"
				    android:layout_marginLeft="@dimen/activity_horizontal_margin"
				    android:contentDescription="@string/txt_cargando"
				    android:src="@mipmap/ic_configuracion" />
				<TextView
				    android:id="@+id/opc_textView5"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:layout_marginLeft="5dp"
				    android:text="@string/title_activity_configuracion"
				    android:textSize="@dimen/tamano_fuente"
				    android:textStyle="bold" />
			</LinearLayout>
			<LinearLayout
			    android:id="@+id/opc_layout_acerca"
			    android:layout_width="fill_parent"
			    android:layout_height="35dp"
			    android:clickable="true"
			    android:onClick="muestraAcercaDeMpopular"
			    android:orientation="horizontal" >
				<ImageView
				    android:id="@+id/opc_imageView5"
				    android:layout_width="30dp"
				    android:layout_height="30dp"
				    android:layout_gravity="center_vertical"
				    android:layout_marginLeft="@dimen/activity_horizontal_margin"
				    android:contentDescription="@string/txt_cargando"
				    android:src="@mipmap/ic_acerca" />
				<TextView
				    android:id="@+id/opc_textView6"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:layout_marginLeft="5dp"
				    android:text="@string/label_acerca_de"
				    android:textSize="@dimen/tamano_fuente"
				    android:textStyle="bold" />
			</LinearLayout>
			<LinearLayout
			    android:id="@+id/opc_layout_terminos"
			    android:layout_width="fill_parent"
			    android:layout_height="35dp"
			    android:clickable="true"
			    android:onClick="muestraTerminosCondiciones"
			    android:orientation="horizontal" >
				<ImageView
				    android:id="@+id/opc_imageView6"
				    android:layout_width="30dp"
				    android:layout_height="30dp"
				    android:layout_gravity="center_vertical"
				    android:layout_marginLeft="@dimen/activity_horizontal_margin"
				    android:contentDescription="@string/txt_cargando"
				    android:src="@mipmap/ic_terminos" />
				<TextView
				    android:id="@+id/opc_textView7"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:layout_marginLeft="5dp"
				    android:text="@string/title_activity_terminos"
				    android:textSize="@dimen/tamano_fuente"
				    android:textStyle="bold" />
			</LinearLayout>
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="5dp"
			    android:orientation="horizontal" />
			<!--android:background="@drawable/ext_linea"-->

			
			
			<LinearLayout
			    android:id="@+id/opc_layout_ayuda"
			    android:layout_width="fill_parent"
			    android:layout_height="35dp"
			    android:clickable="true"
			    android:onClick="muestraAnimacionAyuda"
			    android:orientation="horizontal" >
				<ImageView
				    android:id="@+id/opc_imageView7"
				    android:layout_width="30dp"
				    android:layout_height="30dp"
				    android:layout_gravity="center_vertical"
				    android:layout_marginLeft="@dimen/activity_horizontal_margin"
				    android:contentDescription="@string/txt_cargando"
				    android:src="@mipmap/ic_ayuda" />
				<TextView
				    android:id="@+id/opc_textView8"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:layout_marginLeft="5dp"
				    android:duplicateParentState="true"
				    android:longClickable="true"
				    android:text="@string/label_ayuda"
				    android:textSize="@dimen/tamano_fuente"
				    android:textStyle="bold" />
			</LinearLayout>
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="5dp"
			    android:orientation="horizontal" />
			<!--android:background="@drawable/ext_linea"-->
		</LinearLayout>
	</ScrollView>
</RelativeLayout>
